update for github upload

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://YousafKhan1/github.io/ReactJS-portfolio",
+  "homepage": "https://YousafKhan1/github.io/Portfolio",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
